--- a/src/podcastsmobile.module.css
+++ b/src/podcastsmobile.module.css
@@ -1,5 +1,3 @@
-/* podcastsmobile.module.css */
-
 .background {
   position: relative;
   z-index: 1;
@@ -21,7 +19,7 @@
 
 .podContainer {
   overflow-y: scroll;
-  height: 62dvh;
+  height: 60dvh;
   width: 100dvw;
   padding: 20px;
   position: relative;
